--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@
   --font-primary: 'Poppins', sans-serif;
   --font-secondary: 'Arvo', serif;
   --font-code: 'Roboto', monospace;
-  --bg-color: #00163f;
-  --font-color: #ffffff;
-  --btn-bg-color: #ffffff;
-  --accent-color: #be7efe;
+  --bg-color: #000000d7;
+  --font-color: #fffff;
+  --btn-bg-color: #4f6630;
+  --accent-color: #96ae78;
   --header-shadow: #000 0px 0px 5px;
 }
 
